--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -2,50 +2,54 @@ name: .NET Build, Test and Publish
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
     tags:
-      - '*.*.*'          # Matches tags like 1.0.0, 2.1.3
+      - '*.*.*'  # Matches tags like 1.0.0, 2.1.3
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
   build:
     strategy:
       matrix:
         configuration: [Debug, Release]
+
     runs-on: windows-latest
 
     env:
-      Solution_Name: OneDriver.Framework.sln
-      Test_Project_Path: OneDriver.Framework.UnitTest.sln
+      Solution_Name: OneDriver.Framework/OneDriver.Framework.sln
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Setup .NET 8.0
+      - name: Setup .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: 8.0.x
 
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v2
 
-      - name: Restore Dependencies
+      - name: Restore dependencies
         run: msbuild $env:Solution_Name /t:Restore /p:Configuration=${{ matrix.configuration }}
 
-      - name: Build Solution
+      - name: Build solution
         run: msbuild $env:Solution_Name /p:Configuration=${{ matrix.configuration }}
 
-      - name: Run Unit Tests
-        run: dotnet test $env:Test_Project_Path /p:Configuration=${{ matrix.configuration }}
+      - name: Execute unit tests
+        run: dotnet test $env:Solution_Name /p:Configuration=${{ matrix.configuration }} --no-build --verbosity normal
 
   publish:
-    if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
     needs: build
+    if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
     runs-on: windows-latest
+
+    env:
+      Solution_Name: OneDriver.Framework/OneDriver.Framework.sln
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -53,27 +57,23 @@ jobs:
 
       - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: 8.0.x
 
       - name: Determine version
         id: version
         shell: pwsh
         run: |
           if ("${{ github.ref_type }}" -eq "tag") {
-            # Use the tag directly
-            $ver = "${{ github.ref_name }}"
+              $ver = "${{ github.ref_name }}"
           } else {
-            # Try to find the latest tag
-            $lastTag = git describe --tags --abbrev=0 2>$null
-            if ($lastTag) {
-              # Increment alpha count since last tag
-              $count = git rev-list --count "$lastTag"..HEAD
-              $ver = "$lastTag-alpha.$count"
-            } else {
-              # Default version if no tags exist
-              $count = git rev-list --count HEAD
-              $ver = "0.0.1.$count"
-            }
+              $lastTag = git describe --tags --abbrev=0 2>$null
+              if ($lastTag) {
+                  $count = git rev-list --count "$lastTag"..HEAD
+                  $ver = "$lastTag-alpha.$count"
+              } else {
+                  $count = git rev-list --count HEAD
+                  $ver = "0.0.1.$count"
+              }
           }
           echo "PackageVersion=$ver" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
           Write-Host "Determined version: $ver"
@@ -82,13 +82,18 @@ jobs:
         run: dotnet pack $env:Solution_Name `
              -c Release `
              -o ./packages `
-             -p:PackageVersion=${{ steps.version.outputs.PackageVersion }} `
-             --no-build
+             -p:PackageVersion=${{ steps.version.outputs.PackageVersion }}
 
       - name: Publish NuGet Package
+        if: startsWith(github.ref, 'refs/tags/')
         run: dotnet nuget push ./packages/*.nupkg `
              --source https://api.nuget.org/v3/index.json `
              --api-key ${{ secrets.NUGET_API_KEY }} `
              --skip-duplicate
-        if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/master'
 
+      - name: Upload NuGet Artifact (for non-tagged builds)
+        uses: actions/upload-artifact@v4
+        if: github.ref == 'refs/heads/master'
+        with:
+          name: nuget-preview-packages
+          path: ./packages/*.nupkg
