--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -84,9 +84,12 @@ jobs:
              -o ./packages `
              -p:PackageVersion=${{ steps.version.outputs.PackageVersion }}
 
+      - name: Debug - List generated packages
+        run: dir ./packages/
+                  
       - name: Publish NuGet Package
         if: startsWith(github.ref, 'refs/tags/')
-        run: dotnet nuget push ./packages/*.nupkg `
+        run: dotnet nuget push ./packages/**/*.nupkg `
              --source https://api.nuget.org/v3/index.json `
              --api-key ${{ secrets.NUGET_API_KEY }} `
              --skip-duplicate
