--- a/OneDriver.Framework/OneDriver.Framework/OneDriver.Framework.csproj
+++ b/OneDriver.Framework/OneDriver.Framework/OneDriver.Framework.csproj
@@ -4,11 +4,13 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Serilog" Version="4.2.0" />
+	<None Include="icon.png" Pack="true" PackagePath=""/>
   </ItemGroup>
 
 </Project>
