--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -2,11 +2,11 @@ name: .NET Build, Test and Publish
 
 on:
   push:
-    branches: ["master"]
+    branches: ["main"]
     tags:
       - '*.*.*'  # Matches tags like 1.0.0, 2.1.3
   pull_request:
-    branches: ["master"]
+    branches: ["main"]
 
 jobs:
   build:
