--- a/OneDriver.Framework/OneDriver.Framework/OneDriver.Framework.csproj
+++ b/OneDriver.Framework/OneDriver.Framework/OneDriver.Framework.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Serilog" Version="4.2.0" />
+	  <None Include="icon.png" Pack="true" PackagePath="" />
+
   </ItemGroup>
 
 </Project>
